--- a/src/main/resources/static/style/register.css
+++ b/src/main/resources/static/style/register.css
@@ -39,11 +39,11 @@ main{
 
 
 .cul-item-input{
-    justify-content: center;
+    justify-content: end;
     align-items: center;
     display: flex;
     width: 100%;
-    height: 3em;
+    height: 2.8em;
     margin: 18px 0;
     line-height: 18px;
     font-size: 18px;
@@ -65,6 +65,21 @@ main{
 
 .cul-item-input input:focus{
     border-color: rgb(0, 160, 255);
+}
+
+.cul-item-input button{
+    height: 100%;
+    border-radius: 5px;
+    border: 1px solid var(--Ga2);
+    background-color: var(--bili-blue);
+    padding: 0 20px;
+    color: var(--text_white);
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.cul-item-input button:hover{
+    opacity: 0.8;
 }
 
 .cul-item-placeholder{
