--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,23 +13,24 @@ main section{
 .main-entry{
     display: flex;
     align-items: center;
-    //justify-content: center;
+    justify-content: center;
     width: 100%;
-    /*height: 200px;*/
     margin-top: 50px;
-    justify-content: space-around;
     flex-wrap: wrap;
+
 }
 
 .main-entry-item{
     width: 30%;
     height: 30%;
+    min-width: 150px;
+    min-height: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 8px;
     background-color: #00AEEC;
-    margin: 0 100px;
+    margin: 50px 100px;
     color: var(--text_white);
     font-weight: bold;
     font-size: 32px;border: 1px solid #ccc;
