--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,4 +35,5 @@ main section{
     font-weight: bold;
     font-size: 32px;border: 1px solid #ccc;
     box-sizing: border-box;
+    cursor: pointer;
 }
