--- a/frontend/src/components/Market/Market.css
+++ b/frontend/src/components/Market/Market.css
@@ -8,16 +8,15 @@
 
 .button {
     margin-top: 30px;
-    width: 90px;
     height: 50px;
-    border-radius: 8px;
-    border: none;
-    background-color: #0d6efd;
-    color: white;
-    font-size: 15px;
+    font-size: 20px;
 }
 
-.button:hover {
-    background-color: #0b5ed7;
-    cursor: pointer;
+.postlist{
+    margin-top: 60px;
+}
+
+.singlePost {
+    border: 0.8px solid gray;
+    border-radius: 20px;
 }
