--- a/frontend/src/components/Setting/Setting.css
+++ b/frontend/src/components/Setting/Setting.css
@@ -1,8 +1,13 @@
 .settingBar {
     float: left;
+    position: fixed;
     width:15%;
     height: 100vh;
     border-right: solid 0.8px #dee2e6;
+}
+
+.settingTopSpace{
+    height: 100px;
 }
 
 .singleSetting {
@@ -21,4 +26,23 @@
 .singleSetting:hover{
     background-color: #e5e5e5;
     cursor: pointer;
+}
+
+.settingPerson{
+    margin-left: 15%;
+}
+
+.settingImage{
+    float: left;
+    margin: 0px 200px;
+    height: 160px;
+    width: 160px;
+    border: 0.8px solid gray;
+    border-radius: 50%;
+}
+
+.settingFileUpload{
+    float: left;
+    margin: 60px 0 60px 0;
+    width: 300px;
 }
