add sort frontend

--- a/frontend/src/components/Post/Post.css
+++ b/frontend/src/components/Post/Post.css
@@ -1,5 +1,5 @@
 .postEditor {
-    margin: 20px auto;
+    margin: 20px auto 60px auto;
     border: 0.8px solid gray;
     border-radius: 20px;
     padding: 20px;
