--- a/frontend/src/components/Comment/Comment.css
+++ b/frontend/src/components/Comment/Comment.css
@@ -1,7 +1,7 @@
 .poster {
     width: 60%;
     margin: 100px auto 40px auto;
-    height: 400px;
+    height: 580px;
     border: 0.8px solid gray;
 }
 
@@ -114,4 +114,17 @@
     width: 90%;
     margin: 10px auto;
     border: 0.8px solid gray;
+}
+
+.imageSize {
+    margin-top: 20px;
+    margin-left: 60px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    height: 120px;
+}
+
+.imageSize:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
