--- a/frontend/src/components/Weather/Weather.css
+++ b/frontend/src/components/Weather/Weather.css
@@ -3,7 +3,6 @@
     top: 100px;
     right: 60px;
     position: absolute;
-    width: 240px;
     height: 180px;
     border: 0.8px solid gray;
 }
@@ -24,6 +23,7 @@
     margin-top: 40px;
     font-size: 18px;
     font-family: "Arial";
+    margin-right: 20px;
 }
 
 .weatherDegree{
